--- a/index.html
+++ b/index.html
@@ -299,19 +299,19 @@
 
 
     <!-- Modal -->
-    <div class="modal fade" id="exampleModalLong" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle"
+    <div class="modal fade text-body" id="exampleModalLong" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle"
         aria-hidden="true">
         <div class="modal-dialog modal-lg" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLongTitle">Solar Energy System</h5>
+                    <h5 class="modal-title" id="exampleModalLongTitle">Bradgate Builders</h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
                 </div>
                 <div class="modal-body">
                     <img class="img-fluid mb-4" src="img/carousel-1.jpg" alt="">
-                    <p>Our services include:</p>
+                   <p>Our Services Include:</p>
                     <ul>
                         <li>Project management</li>
                         <li>Foundations</li>
@@ -324,9 +324,7 @@
                         <li>Decorating</li>
                         <li>House refurbishment</li>
                         <li>Landscape Design and Maintenance</li>
-
-                    </ul>
-                   
+                    </ul>                   
                 </div>
             </div>
         </div>
