contact us button to footer

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                         <div class="p-3" style="max-width: 900px;">
                             <h4 class="text-white text-uppercase mb-4" style="letter-spacing: 3px;">Bradgate Builders</h4>
                             <h3 class="display-2 font-secondary text-white mb-4">Quality construction from start to finish</h3>
-                            <a class="btn btn-light font-weight-bold py-3 px-5 mt-2 btn-scroll" href="#contact">Contact Us</a>
+                            <a class="btn btn-light font-weight-bold py-3 px-5 mt-2 btn-scroll" href="#footer">Contact Us</a>
                         </div>
                     </div>
                 </div>
@@ -75,7 +75,7 @@
                         <div class="p-3" style="max-width: 900px;">
                             <h4 class="text-white text-uppercase mb-4" style="letter-spacing: 3px;">Bradgate Builders</h4>
                             <h3 class="display-2 font-secondary text-white mb-4">From planning to completion, we’ve got you covered</h3>
-                            <a class="btn btn-light font-weight-bold py-3 px-5 mt-2 btn-scroll" href="#contact">Contact Us</a>
+                            <a class="btn btn-light font-weight-bold py-3 px-5 mt-2 btn-scroll" href="#footer">Contact Us</a>
                         </div>
                     </div>
                 </div>
