--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Roboto:wght@500;700&display=swap" rel="stylesheet"> 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:wght@400;700&family=Poppins:wght@200;400;600;700;800&display=swap" rel="stylesheet">
 
     <!-- Font Awesome -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
@@ -46,7 +50,7 @@
                 <h1 class="display-6 text-white text-uppercase m-0">Bradgate Builders</h1>
             </a>
             <div class="navbar-nav mr-auto py-0">
-                <a href="#project" class="nav-item nav-link">Projects</a>
+                <!-- <a href="#project" class="nav-item nav-link">Projects</a> -->
                 <a href="#testimonial" class="nav-item nav-link">Testimonial</a>
                 <a href="#footer" class="nav-item nav-link">Contact</a>
             </div>
@@ -60,25 +64,16 @@
         <div id="header-carousel" class="carousel slide carousel-fade" data-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item position-relative active" style="height: 100vh; min-height: 400px;">
-                    <img class="position-absolute w-100 h-100" src="img/carousel-1.jpg" style="object-fit: cover;">
+                    <img class="position-absolute w-100 h-100" src="img/cover2.webp" style="object-fit: cover;">
                     <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                         <div class="p-3" style="max-width: 900px;">
-                            <h4 class="text-white text-uppercase mb-4" style="letter-spacing: 3px;">Bradgate Builders</h4>
-                            <h3 class="display-2 font-secondary text-white mb-4">Quality construction from start to finish</h3>
+                            <h3 class="display-2 text-white text-uppercase mb-4" style="letter-spacing: 3px;">Bradgate Builders</h3>
+                            <h3 class="display-3 font-secondary text-white mb-4">Quality construction from start to finish</h3>
                             <a class="btn btn-light font-weight-bold py-3 px-5 mt-2 btn-scroll" href="#footer">Contact Us</a>
                         </div>
                     </div>
                 </div>
-                <div class="carousel-item position-relative" style="height: 100vh; min-height: 400px;">
-                    <img class="position-absolute w-100 h-100" src="img/carousel-2.jpg" style="object-fit: cover;">
-                    <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
-                        <div class="p-3" style="max-width: 900px;">
-                            <h4 class="text-white text-uppercase mb-4" style="letter-spacing: 3px;">Bradgate Builders</h4>
-                            <h3 class="display-2 font-secondary text-white mb-4">From planning to completion, we’ve got you covered</h3>
-                            <a class="btn btn-light font-weight-bold py-3 px-5 mt-2 btn-scroll" href="#footer">Contact Us</a>
-                        </div>
-                    </div>
-                </div>
+               
             </div>
             <!-- <a class="carousel-control-prev justify-content-start" href="#header-carousel" data-slide="prev">
                 <div class="btn btn-primary px-0" style="width: 68px; height: 68px;">
@@ -100,12 +95,13 @@
         <div class="container py-5">
             <div class="row align-items-center">
                 <div class="col-lg-5">
-                    <img class="img-fluid mb-4 mb-lg-0" src="img/about.jpg" alt="">
+                    <img class="img-fluid mb-4 mb-lg-0" src="img/pexels-brett-jordan-4692281.jpg" alt="">
                 </div>
                 <div class="col-lg-7">
                     <h6 class="text-uppercase text-primary mb-3" style="letter-spacing: 3px;">About Us</h6>
-                    <h1 class="display-4 mb-3"><span class="text-primary">15+ Years Experience</span> In The Construction Industry</h1>
-                    <p>Bradgate Builders provides an entire start-to-finish solution for all external and internal works of both domestic and commercial buildings. With an impeccable reputation, built over 15 years, we are firmly established as the trusted, local supplier of quality workmanship. </p>
+                    <h1 class="display-4 mb-3"><span class="text-primary">25+ Years Experience</span> In The Construction Industry</h1>
+                    <p>With over 25 years experience, Bradgate Builders can provide all your construction needs from property extensions to garden walls, patios, landscaping and fencing. </p>
+                    <!-- <p>Bradgate Builders provides an entire start-to-finish solution for all external and internal works of both domestic and commercial buildings. With an impeccable reputation, built over 15 years, we are firmly established as the trusted, local supplier of quality workmanship. </p> -->
                     <!-- <a class="btn btn-primary font-weight-bold py-3 px-5 mt-2" type="button" data-toggle="modal" data-target="#exampleModalLong">Read More</a> -->
                 </div>
             </div>
@@ -125,42 +121,30 @@
                 <div class="col-lg-4 mb-3">
                     <div class="product-item mb-2">
                         <div class="product-img">
-                            <img class="img-fluid" src="img/product-1.jpg" alt="">
+                            <img class="img-fluid" src="img/bricklayer1.jpg" alt="">
                             <a type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalLong">
                                 <i class="fa fa-2x fa-plus text-white"></i>
                             </a>
                         </div>
                         <div class="bg-secondary text-center p-4">
-                            <h3 class="m-0">Construction</h3>
+                            <h3 class="m-0">Brickwork</h3>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-4 mb-3">
                     <div class="product-item mb-2">
                         <div class="product-img">
-                            <img class="img-fluid" src="img/product-2.jpg" alt="">
-                            <a type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalLong">
+                            <img class="img-fluid" src="img/landscape-pic1.JPG" alt="">
+                            <a type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalLong1">
                                 <i class="fa fa-2x fa-plus text-white"></i>
                             </a>
                         </div>
                         <div class="bg-secondary text-center p-4">
-                            <h3 class="m-0">Property Maintenance</h3>
+                            <h3 class="m-0">Landscaping</h3>
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 mb-3">
-                    <div class="product-item mb-2">
-                        <div class="product-img">
-                            <img class="img-fluid" src="img/product-3.jpg" alt="">
-                            <a type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalLong">
-                                <i class="fa fa-2x fa-plus text-white"></i>
-                            </a>
-                        </div>
-                        <div class="bg-secondary text-center p-4">
-                            <h3 class="m-0">Landscape Gardening</h3>
-                        </div>
-                    </div>
-                </div>
+               
             </div>
         </div>
     </div>
@@ -168,7 +152,7 @@
 
 
     <!-- Gallery Start -->
-    <div class="container-fluid bg-gallery" id="project" style="padding: 120px 0; margin: 90px 0;">
+    <!-- <div class="container-fluid bg-gallery" id="project" style="padding: 120px 0; margin: 90px 0;">
         <div class="section-title position-relative text-center" style="margin-bottom: 120px;">
             <h6 class="text-uppercase text-primary mb-3" style="letter-spacing: 3px;">Project</h6>
             <h1 class="font-secondary display-4 text-white">Project Photo Gallery</h1>
@@ -211,7 +195,7 @@
                 </a>
             </div>
         </div>
-    </div>
+    </div> -->
     <!-- Gallery End -->
 
 
@@ -226,14 +210,19 @@
                 <div class="col-lg-8">
                     <div class="owl-carousel testimonial-carousel">
                         <div class="text-center">
-                            <p style="font-size: 22px;">Dolor eirmod diam stet kasd sed. Aliqu rebum est eos. Rebum elitr dolore et eos labore, stet justo sed est sed. Diam sed sed dolor stet amet eirmod eos labore diam</p>
-                            <h4>Client Name</h4>
-                            <span>Profession</span>
+                            <p style="font-size: 22px;">Fantastic job on my extension! I had to replace the previous bricklayer due to poor workmanship. Bradagte Builders have been reliable and have produced quality work. Daniel is hardworking to keep to my deadlines, is a good team player and helpful in other aspects of the project. What's more he is a polite and genuine person. I will be hiring Daniel time and time again, highly recommend.</p>
+                            <h4>Robert</h4>
+                            <span>Project manager</span>
                         </div>
                         <div class="text-center">
-                            <p style="font-size: 22px;">Dolor eirmod diam stet kasd sed. Aliqu rebum est eos. Rebum elitr dolore et eos labore, stet justo sed est sed. Diam sed sed dolor stet amet eirmod eos labore diam</p>
-                            <h4>Client Name</h4>
-                            <span>Profession</span>
+                            <p style="font-size: 22px;">Can't thank Bradgate Builders enough for my kitchen extension, so pleased with the quality of work and professionalism throughout. 100% recommend</p>
+                            <h4>Rebecca</h4>
+                            <span>Customer</span>
+                        </div>
+                        <div class="text-center">
+                            <p style="font-size: 22px;"> I had my garden transformed this week with new turf and a new patio and I couldn't be happier with the quality and workmanship from Daniel and his team. They arrived early each morning and are very friendly and professional. I Wouldn't use anyone else now for future building and garden work. Thank you Bradgate Builders!</p>
+                            <h4>Linda</h4>
+                            <span>Customer</span>
                         </div>
                     </div>
                 </div>
@@ -249,21 +238,21 @@
             <div class="col-12 mb-4 px-4">
                 <div class="row mb-5 p-4" style="background: rgba(256, 256, 256, .05);">
                     <div class="col-md-4">
-                        <div class="text-md-center">
+                        <!-- <div class="text-md-center">
                             <h5 class="text-primary text-uppercase mb-2" style="letter-spacing: 5px;">Our Office</h5>
                             <p class="mb-4 m-md-0">123 Street, New York, USA</p>
-                        </div>
+                        </div> -->
                     </div>
                     <div class="col-md-4">
                         <div class="text-md-center">
                             <h5 class="text-primary text-uppercase mb-2" style="letter-spacing: 5px;">Email Us</h5>
-                            <p class="mb-4 m-md-0">info@example.com</p>
+                            <p class="mb-4 m-md-0">bradgatebuilders@outlook.com</p>
                         </div>
                     </div>
                     <div class="col-md-4">
                         <div class="text-md-center">
                             <h5 class="text-primary text-uppercase mb-2" style="letter-spacing: 5px;">Call Us</h5>
-                            <p class="m-0">+012 345 6789</p>
+                            <p class="m-0">07572725083</p>
                         </div>
                     </div>
                 </div>
@@ -310,25 +299,47 @@
                     </button>
                 </div>
                 <div class="modal-body">
-                    <img class="img-fluid mb-4" src="img/carousel-1.jpg" alt="">
+                    <img class="img-fluid mb-4" src="img/brickwall.webp" alt="">
                    <p>Our Services Include:</p>
                     <ul>
-                        <li>Project management</li>
-                        <li>Foundations</li>
-                        <li>Internal and External works</li>
-                        <li>Basement developments</li>
-                        <li>Electrics and electrical systems</li>
-                        <li>Plumbing</li>
-                        <li>Plastering</li>
-                        <li>Tiling</li>
-                        <li>Decorating</li>
-                        <li>House refurbishment</li>
-                        <li>Landscape Design and Maintenance</li>
+                        <li>Extensions</li>
+                        <li>Garages</li>
+                        <li>Garage conversions</li>
+                        <li>Retaining walls</li>
+                        <li>Garden walls</li>
+                        <li>Alerations</li>
+                        <li>Repointing</li>
                     </ul>                   
                 </div>
             </div>
         </div>
     </div>
+    <div class="modal fade text-body" id="exampleModalLong1" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle"
+    aria-hidden="true">
+    <div class="modal-dialog modal-lg" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLongTitle">Bradgate Builders</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <img class="img-fluid mb-4" src="img/landscape-pic1.JPG" alt="">
+               <p>Our Services Include:</p>
+                <ul>
+                    <li>Patios</li>
+                    <li>Block paving</li>
+                    <li>Driveways</li>
+                    <li>Decking</li>
+                    <li>Fencing</li>
+                    <li>Turf</li>
+                    <li>Artifical grass</li>
+                </ul>                   
+            </div>
+        </div>
+    </div>
+</div>
     <!-- Modal -->
 
 
