--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:wght@400;700&family=Poppins:wght@200;400;600;700;800&display=swap" rel="stylesheet">
+    <link href="//db.onlinewebfonts.com/c/4caf8e484fc6636e0955504265b60f27?family=DeSotoW00-Engraved" rel="stylesheet" type="text/css"/>
+    <!-- <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:wght@400;700&family=Poppins:wght@200;400;600;700;800&display=swap" rel="stylesheet"> -->
 
     <!-- Font Awesome -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
@@ -47,7 +48,7 @@
                
             </div>
             <a href="index.html" class="navbar-brand bg-primary px-4 mx-3 d-none d-lg-block">
-                <h1 class="display-6 text-white text-uppercase m-0">Bradgate Builders</h1>
+                <h1 class="display-7 text-white text-uppercase m-0">Bradgate Builders</h1>
             </a>
             <div class="navbar-nav mr-auto py-0">
                 <!-- <a href="#project" class="nav-item nav-link">Projects</a> -->
@@ -67,8 +68,8 @@
                     <img class="position-absolute w-100 h-100" src="img/cover2.webp" style="object-fit: cover;">
                     <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                         <div class="p-3" style="max-width: 900px;">
-                            <h3 class="display-2 text-white text-uppercase mb-4" style="letter-spacing: 3px;">Bradgate Builders</h3>
-                            <h3 class="display-3 font-secondary text-white mb-4">Quality construction from start to finish</h3>
+                            <h3 class="display-3 text-white text-uppercase mb-4" style="letter-spacing: 3px;">Bradgate Builders</h3>
+                            <h3 class="display-4 font-secondary text-white mb-4">Quality construction from start to finish</h3>
                             <a class="btn btn-light font-weight-bold py-3 px-5 mt-2 btn-scroll" href="#footer">Contact Us</a>
                         </div>
                     </div>
