full screen layout servies corrected

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <!-- Navbar Start -->
     <nav class="navbar fixed-top shadow-sm navbar-expand-lg bg-dark navbar-dark py-1 py-lg-0 px-lg-5">
         <a href="index.html" class="navbar-brand d-block d-lg-none">
-            <h1 class="display-6 text-white text-uppercase m-0">Bradgate Builders</h1>
+            <h1 class="nav_h1 text-white text-uppercase m-0">Bradgate Builders</h1>
         </a>
         <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
             <span class="navbar-toggler-icon"></span>
@@ -48,7 +48,7 @@
                
             </div>
             <a href="index.html" class="navbar-brand bg-primary px-4 mx-3 d-none d-lg-block">
-                <h1 class="display-7 text-white text-uppercase m-0">Bradgate Builders</h1>
+                <h3 class="display-6 text-white text-uppercase m-0">Bradgate Builders</h3>
             </a>
             <div class="navbar-nav mr-auto py-0">
                 <!-- <a href="#project" class="nav-item nav-link">Projects</a> -->
@@ -118,8 +118,8 @@
                 <h6 class="text-uppercase text-primary mb-3" style="letter-spacing: 3px;">Services</h6>
                 <h1 class="font-secondary display-4">What We Cover</h1>
             </div>
-            <div class="row">
-                <div class="col-lg-4 mb-3">
+            <div class="row d-flex justify-content-around">
+                <div class="col-lg- mb-3">
                     <div class="product-item mb-2">
                         <div class="product-img">
                             <img class="img-fluid" src="img/bricklayer1.jpg" alt="">
