edit more info button

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="//db.onlinewebfonts.com/c/4caf8e484fc6636e0955504265b60f27?family=DeSotoW00-Engraved" rel="stylesheet" type="text/css"/>
-    <!-- <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:wght@400;700&family=Poppins:wght@200;400;600;700;800&display=swap" rel="stylesheet"> -->
+    <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:wght@400;700&family=Poppins:wght@200;400;600;700;800&display=swap" rel="stylesheet">
 
     <!-- Font Awesome -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
@@ -68,8 +68,8 @@
                     <img class="position-absolute w-100 h-100" src="img/cover2.webp" style="object-fit: cover;">
                     <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                         <div class="p-3" style="max-width: 900px;">
-                            <h3 class="display-3 text-white text-uppercase mb-4" style="letter-spacing: 3px;">Bradgate Builders</h3>
-                            <h3 class="display-4 font-secondary text-white mb-4">Quality construction from start to finish</h3>
+                            <h3 class="headers display-3 text-white text-uppercase mb-4" style="letter-spacing: 3px;">Bradgate Builders</h3>
+                            <h3 class="headers display-4 font-secondary text-white mb-4">Quality construction from start to finish</h3>
                             <a class="btn btn-light font-weight-bold py-3 px-5 mt-2 btn-scroll" href="#footer">Contact Us</a>
                         </div>
                     </div>
@@ -119,12 +119,12 @@
                 <h1 class="font-secondary display-4">What We Cover</h1>
             </div>
             <div class="row d-flex justify-content-around">
-                <div class="col-lg- mb-3">
+                <div class="col-lg-4 mb-3">
                     <div class="product-item mb-2">
                         <div class="product-img">
-                            <img class="img-fluid" src="img/bricklayer1.jpg" alt="">
+                            <img class="img-fluid" src="img//bricklayer1.jpg" alt="">
                             <a type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalLong">
-                                <i class="fa fa-2x fa-plus text-white"></i>
+                                More Info
                             </a>
                         </div>
                         <div class="bg-secondary text-center p-4">
@@ -137,7 +137,7 @@
                         <div class="product-img">
                             <img class="img-fluid" src="img/landscape-pic1.JPG" alt="">
                             <a type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalLong1">
-                                <i class="fa fa-2x fa-plus text-white"></i>
+                                More Info
                             </a>
                         </div>
                         <div class="bg-secondary text-center p-4">
