edit contact info column spacing

--- a/index.html
+++ b/index.html
@@ -238,19 +238,19 @@
         <div class="row pt-5">
             <div class="col-12 mb-4 px-4">
                 <div class="row mb-5 p-4" style="background: rgba(256, 256, 256, .05);">
-                    <div class="col-md-4">
-                        <!-- <div class="text-md-center">
+                    <!-- <div class="col-md-4">
+                        <div class="text-md-center">
                             <h5 class="text-primary text-uppercase mb-2" style="letter-spacing: 5px;">Our Office</h5>
                             <p class="mb-4 m-md-0">123 Street, New York, USA</p>
-                        </div> -->
-                    </div>
-                    <div class="col-md-4">
+                        </div>
+                    </div> -->
+                    <div class="col-md-6">
                         <div class="text-md-center">
                             <h5 class="text-primary text-uppercase mb-2" style="letter-spacing: 5px;">Email Us</h5>
                             <p class="mb-4 m-md-0">bradgatebuilders@outlook.com</p>
                         </div>
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-md-6">
                         <div class="text-md-center">
                             <h5 class="text-primary text-uppercase mb-2" style="letter-spacing: 5px;">Call Us</h5>
                             <p class="m-0">07572725083</p>
