update gallery pics

--- a/index.html
+++ b/index.html
@@ -153,50 +153,83 @@
 
 
     <!-- Gallery Start -->
-    <!-- <div class="container-fluid bg-gallery" id="project" style="padding: 120px 0; margin: 90px 0;">
+    <div class="container-fluid bg-gallery" id="project" style="padding: 120px 0; margin: 90px 0;">
         <div class="section-title position-relative text-center" style="margin-bottom: 120px;">
             <h6 class="text-uppercase text-primary mb-3" style="letter-spacing: 3px;">Project</h6>
             <h1 class="font-secondary display-4 text-white">Project Photo Gallery</h1>
         </div>
         <div class="owl-carousel gallery-carousel">
             <div class="gallery-item">
-                <img class="img-fluid w-100" src="img/gallery-1.jpg" alt="">
-                <a class="btn btn-primary" href="img/gallery-1.jpg" data-lightbox="gallery">
+                <img class="img-fluid w-100 h-100" src="img/gallery/garden-wall/8b16a9d7-9e1a-4bfd-9e1b-0eebd1a5ca3e.JPG" alt="">
+                <a class="btn" href="img/gallery/garden-wall/8b16a9d7-9e1a-4bfd-9e1b-0eebd1a5ca3e.JPG" data-lightbox="gallery">
                     <i class="fa fa-2x fa-plus text-white"></i>
                 </a>
             </div>
             <div class="gallery-item">
-                <img class="img-fluid w-100" src="img/gallery-2.jpg" alt="">
-                <a class="btn btn-primary" href="img/gallery-2.jpg" data-lightbox="gallery">
+                <img class="img-fluid w-100 h-100" src="img/gallery/garden-wall/1954b5db-ab02-4fa2-aac2-c5a49fa13d3d.JPG" alt="">
+                <a class="btn" href="img/gallery/garden-wall/1954b5db-ab02-4fa2-aac2-c5a49fa13d3d.JPG" data-lightbox="gallery">
                     <i class="fa fa-2x fa-plus text-white"></i>
                 </a>
             </div>
             <div class="gallery-item">
-                <img class="img-fluid w-100" src="img/gallery-3.jpg" alt="">
-                <a class="btn btn-primary" href="img/gallery-3.jpg" data-lightbox="gallery">
+                <img class="img-fluid w-100 h-100" src="img/gallery/garden-wall/b3ca8290-8499-4580-9aba-33a394ac0500.JPG" alt="">
+                <a class="btn" href="img/gallery/garden-wall/b3ca8290-8499-4580-9aba-33a394ac0500.JPG" data-lightbox="gallery">
                     <i class="fa fa-2x fa-plus text-white"></i>
                 </a>
             </div>
             <div class="gallery-item">
-                <img class="img-fluid w-100" src="img/gallery-4.jpg" alt="">
-                <a class="btn btn-primary" href="img/gallery-4.jpg" data-lightbox="gallery">
+                <img class="img-fluid w-100 h-100" src="img/gallery/garden-2/8ece589e-5523-4c87-8c31-2b08745a477e.JPG" alt="">
+                <a class="" href="img/gallery/garden-2/8ece589e-5523-4c87-8c31-2b08745a477e.JPG" data-lightbox="gallery">
                     <i class="fa fa-2x fa-plus text-white"></i>
                 </a>
             </div>
             <div class="gallery-item">
-                <img class="img-fluid w-100" src="img/gallery-5.jpg" alt="">
-                <a class="btn btn-primary" href="img/gallery-5.jpg" data-lightbox="gallery">
+                <img class="img-fluid w-100 h-100" src="img/gallery/garden-2/9c088712-ab7c-4c2a-9c11-66960faa9c22.JPG" alt="">
+                <a class="" href="img/gallery/garden-2/9c088712-ab7c-4c2a-9c11-66960faa9c22.JPG" data-lightbox="gallery">
                     <i class="fa fa-2x fa-plus text-white"></i>
                 </a>
             </div>
             <div class="gallery-item">
-                <img class="img-fluid w-100" src="img/gallery-6.jpg" alt="">
-                <a class="btn btn-primary" href="img/gallery-6.jpg" data-lightbox="gallery">
+                <img class="img-fluid w-100 h-100" src="img/gallery/garden-2/a51f266c-3afc-4815-85b1-ef3728242c6e.JPG" alt="">
+                <a class="" href="img/gallery/garden-2/a51f266c-3afc-4815-85b1-ef3728242c6e.JPG" data-lightbox="gallery">
                     <i class="fa fa-2x fa-plus text-white"></i>
                 </a>
             </div>
+            
+            <div class="gallery-item">
+                <img class="img-fluid w-100 h-100" src="img/gallery/garden-1/eb0dbc6f-f627-4879-acaa-cc03ebdab216.JPG" alt="">
+                <a class="" href="img/gallery/garden-1/eb0dbc6f-f627-4879-acaa-cc03ebdab216.JPG" data-lightbox="gallery">
+                    <i class="fa fa-2x fa-plus text-white"></i>
+                </a>
+            </div>
+            <div class="gallery-item">
+                <img class="img-fluid w-100 h-100" src="img/gallery/garden-3/2e49c0aa-efb3-412a-8e2e-558b6f6d70c0.JPG" alt="">
+                <a class="" href="img/gallery/garden-3/2e49c0aa-efb3-412a-8e2e-558b6f6d70c0.JPG" data-lightbox="gallery">
+                    <i class="fa fa-2x fa-plus text-white"></i>
+                </a>
+            </div>
+            <div class="gallery-item">
+                <img class="img-fluid w-100 h-100" src="img/gallery/garden-3/46ec9237-49f0-46a8-aa21-dd52468e1a83.JPG" alt="">
+                <a class="" href="img/gallery/garden-3/46ec9237-49f0-46a8-aa21-dd52468e1a83.JPG" data-lightbox="gallery">
+                    <i class="fa fa-2x fa-plus text-white"></i>
+                </a>
+            </div>
+            <div class="gallery-item">
+                <img class="img-fluid w-100 h-100" src="img/gallery/garden-3/844bea1a-1418-4e6e-9666-56e5c3c269a5.JPG" alt="">
+                <a class="" href="img/gallery/garden-3/844bea1a-1418-4e6e-9666-56e5c3c269a5.JPG" data-lightbox="gallery">
+                    <i class="fa fa-2x fa-plus text-white"></i>
+                </a>
+            </div>
+            <div class="gallery-item">
+                <img class="img-fluid w-100 h-100" src="img/gallery/garden-3/cc723bcd-11cd-4c6e-94d5-4e81b982f1cb.JPG" alt="">
+                <a class="" href="img/gallery/garden-3/cc723bcd-11cd-4c6e-94d5-4e81b982f1cb.JPG" data-lightbox="gallery">
+                    <i class="fa fa-2x fa-plus text-white"></i>
+                </a>
+            </div>
+           
+
         </div>
-    </div> -->
+    </div>
     <!-- Gallery End -->
 
 
